# family-e-ink-dashboard

./: .gitignore  Dockerfile  README.md  config.json.sample  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  ruff.yml  tests.yml
ics_cal/: ics.py  icshelper.py
inkplate/: inkplate.ino
inkplate10/: inkplate10.ino
inkplate10/lib/: png_image_helper.cpp
owm/: owm.py
render/: render.py
src/: config.py  main.py
src/ics_cal/: ics.py  icshelper.py
src/owm/: owm.py
src/render/: dashboard_template.html  dashboard_template.html.j2  render.py
src/render/css/: styles.css
tests/: test_config.py  test_ics.py  test_moon_phase.py  test_render_helper.py
