[tool.poetry]
name = "family-e-ink-dashboard"
version = "0.9.1"
description = "E-Ink dashboard showing weather and a family calendar running on an Inkplate 10, rendering done in a Docker container"
authors = ["speedyg0nz", "stefanthoss"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
pillow = "^11.0.0"
pytz = "^2025.2"
recurring-ical-events = "^3.6.1"
requests = "^2.32.3"
selenium = "^4.26.1"
structlog = "^24.4.0"
uvicorn = "^0.34.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
